<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/piggyImg"
        android:layout_width="66dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="32dp"
        android:transitionName="welcome_transition"
        android:src="@drawable/piggy" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/piggyImg"
        android:layout_alignParentTop="true"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="-102dp"
        android:shadowColor="@color/textBlack"
        android:text="@string/welcomeTitle"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:hint="@string/emailHint"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/emailTxt"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="230dp"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        app:srcCompat="@drawable/divider" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="385dp"
        app:srcCompat="@drawable/divider" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="275dp"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="117dp"
        android:background="@drawable/button_custom"
        android:text="@string/btnSign"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="275dp"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-18dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/edit_text_custom"
        android:text="@string/btnRegister"
        android:textColor="@color/orange" />


</RelativeLayout>