<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="53dp"
        android:text="@string/dailyAllowance"
        android:textColor="@color/textBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtAllowance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:text="allowance result" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/box"
        android:elevation="5dp"
        android:gravity="top|center_horizontal"
        android:text="@string/income" />

    <TextView
        android:id="@+id/txtIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="-157dp"
        android:layout_marginTop="42dp"
        android:layout_toEndOf="@+id/textView3"
        android:elevation="7dp"
        android:text="income result" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/box"
        android:elevation="5dp"
        android:gravity="top|center_horizontal"
        android:text="@string/expense" />

    <TextView
        android:id="@+id/txtExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="-36dp"
        android:layout_marginTop="43dp"
        android:layout_toEndOf="@+id/textView3"
        android:elevation="7dp"
        android:text="expense result" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/box"
        android:elevation="5dp"
        android:gravity="top|center_horizontal"
        android:text="@string/total" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="94dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/textView3"
        android:elevation="7dp"
        android:text="total result" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtExpense"
        android:layout_alignEnd="@+id/textView12"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/assessment"
        android:tint="@color/textWhite"
        app:backgroundTint="@color/orange" />

</RelativeLayout>