<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="59dp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/amountSpentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/expenseNameTxt"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="6dp"
        android:ems="10"
        android:hint="@string/amountTxt"
        android:inputType="number" />

    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dateTxt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="95dp"
        android:text="@string/expense"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/expenseNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="199dp"
        android:ems="10"
        android:hint="@string/titleExpense"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginBottom="206dp"
        android:entries="@array/txtGroup" />

    <!--<Button-->
        <!--android:id="@+id/cancelBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginEnd="-151dp"-->
        <!--android:layout_marginBottom="82dp"-->
        <!--android:layout_toStartOf="@+id/dateTxt"-->
        <!--android:background="@drawable/box"-->
        <!--android:text="@string/btnCancle" />-->

    <!--<Button-->
        <!--android:id="@+id/saveBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignTop="@+id/cancelBtn"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginEnd="71dp"-->
        <!--android:background="@drawable/button_custom_filled"-->
        <!--android:text="@string/btnSave"-->
        <!--android:textColor="@color/common_google_signin_btn_text_dark_pressed" />-->
</RelativeLayout>