<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExpenseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/goBackIcon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="115dp"
            android:layout_marginTop="20dp"
            android:text="Expense Calendar"
            android:textColor="@color/orange"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="78dp"
            android:text="@string/dailyAllowance"
            android:textColor="@color/textBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtAllowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="66dp"
            android:text="allowance result"
            android:textAlignment="center" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:layout_alignTop="@+id/txtAllowance"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/box"
            android:elevation="5dp"
            android:gravity="top|center_horizontal"
            android:text="@string/income" />

        <TextView
            android:id="@+id/txtIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginStart="-156dp"
            android:layout_marginTop="42dp"
            android:layout_toEndOf="@+id/textView3"
            android:elevation="7dp"
            android:text="income result"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="165dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/box"
            android:elevation="5dp"
            android:gravity="top|center_horizontal"
            android:text="@string/expense" />

        <TextView
            android:id="@+id/txtExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginStart="-31dp"
            android:layout_marginTop="45dp"
            android:layout_toEndOf="@+id/textView3"
            android:elevation="7dp"
            android:text="expense result"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/textView12"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="287dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/box"
            android:elevation="5dp"
            android:gravity="top|center_horizontal"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginStart="101dp"
            android:layout_marginTop="42dp"
            android:layout_toEndOf="@+id/textView3"
            android:elevation="7dp"
            android:text="total result"
            android:textAlignment="center"/>

    </RelativeLayout>

</FrameLayout>